--- a/create.html
+++ b/create.html
@@ -31,9 +31,13 @@
       <div class="centering">
         <div class="map-container">
           <div class="uc-initial-content">
-            <div id="tapa">
-              <h1>Mapa Argentino</h1>
-              <p>crea tu radio</p>
+            <div class="paper">
+              <div id="tapa">
+                <div class="rubber_stamp">
+                  <h1>Mapa Argentino</h1>
+                  <p>crea tu radio</p>
+                </div>
+              </div>
             </div>
           </div>
           <div class="uc-final-content">
